# dotfiles

./: .gitconfig  .tmux.conf  .tool-versions  .vimrc  .zshrc  README-transmission.md  README.md  alacritty.yml  config.yml  direnv.toml  dot_bashrc  dot_gitconfig  dot_tool-versions  dot_zshrc  git_sync.sh  git_sync_auto.sh  github_prs.yml  linux-manjaro-setup.sh  mac-setup.sh  my-ublock-static-filters.txt  opencode.json  start.sh  termux-setup.sh  warp_config.yaml  write.sh
.config/transmission-daemon/: settings.json
amazonq/: mcp.json
aws/: athena.ipynb  pyproject.toml  s3_info_details.ipynb  trigger_evenbridge_rule.ipynb
aws/src/aws/: __init__.py
gitlab/: hello.py  pyproject.toml
raycast_scripts/: Raycast 2022-06-13 10.44.03.rayconfig  Raycast 2025-03-19 23.20.14.rayconfig  google-maps.sh  speedtest.sh  start.py  start.sh  tunnelblick-connect.applescript  write.sh  youtube.sh
scripts/: enable-transmission-user.sh  gen_m4b.sh  migrate_to_av1.sh  miniflux_youtube_download.sh  music.sh  notion_to_pdf.py  omnivore.ts  readeck_youtube_download.sh  start.py  start.sh  today.sh  write.sh
scripts/readeck/: delete_old_archived.py  openapi-spec.json
setups/: git-setup.sh  linux-manjaro-setup.sh  linux-popos.sh  mac-setup.sh  ssh-setup.sh  termux-setup.sh  windows-setup.ps
setups/raspberry/: .zshrc  dot_zshrc  setup.sh
sounds/: sounds.sh
systemd/user/: copyparty.service  env.example  miniflux-youtube-download.service  miniflux-youtube-download.timer  readeck-youtube-download.service  readeck-youtube-download.timer  transmission-daemon.service
