[project]
name = "aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awswrangler>=3.9.1",
    "boto3>=1.35.10",
    "ibis-framework[duckdb]>=9.4.0",
    "s3fs>=2024.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
